usystemtyzowane nazyw formów, pilmowanie przezd symbolami nieoznaczonymi naprawione i dodatkowa strona w ich wypadku

--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -11,12 +11,12 @@
     <input th:field="*{firstArgument}" id="fa"/>
     <label for="op">wybierz dzialanie</label>
     <select th:field="*{operator}" id="op">
-        <option th:value="'+'" th:text="dodawanie"></option>
-        <option th:value="'-'" th:text="odejmowanie"></option>
-        <option th:value="'*'" th:text="mnozenie"></option>
-        <option th:value="'/'" th:text="dzielenie"></option>
-        <option th:value="'^'" th:text="potegowanie"></option>
-        <option th:value="'root'" th:text="pierwiastkowanie"></option>
+        <option th:value="'+'">dodawanie</option>
+        <option th:value="'-'">odejmowanie</option>
+        <option th:value="'*'">mnozenie</option>
+        <option th:value="'/'">dzielenie</option>
+        <option th:value="'^'">potegowanie</option>
+        <option th:value="'root'">pierwiastkowanie</option>
     </select>
     <label for="sa">podaj druga liczbe</label>
     <input th:field="*{secondArgument}" id="sa"/>
