--- a/src/main/resources/templates/calculator_execute.html
+++ b/src/main/resources/templates/calculator_execute.html
@@ -5,11 +5,7 @@
     <title>calculation</title>
 </head>
 <body>
-<h1>the result:</h1>
-<span th:text="${firstArgument}"></span>
-<span th:text="${operator}"></span>
-<span th:text="${secondArgument}"></span>
-<span th:text="'='"></span>
+<h1>wynik:</h1>
 <span th:text="${result}"></span>
 </body>
 </html>
