--- a/src/main/resources/templates/calculator_redo.html
+++ b/src/main/resources/templates/calculator_redo.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>calculator app</title>
+    <title>redo</title>
 </head>
 <body>
 <h1>kalkulator</h1>>
