poprawione regexy, dzialajaca konwersja na CSV i pobieranie

--- a/src/main/resources/templates/stringmod.html
+++ b/src/main/resources/templates/stringmod.html
@@ -15,6 +15,9 @@
     </select>
     <button type="submit">START</button>
 </form>
-
+<h2>pobierz baze danych jako CSV</h2>
+<form action="#" th:action="@{/stringmod/download}" method="get">
+    <button type="submit">DOWNLOAD</button>
+</form>
 </body>
 </html>
