--- a/src/main/resources/templates/graph_execute.html
+++ b/src/main/resources/templates/graph_execute.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
-
+    <title>graph</title>
 </head>
 <body>
-
 <br/><br/><br/>
-
 <div class="container">
-
     <div id="container"
          style="width: 850px; height: 600px; margin: 0 auto"></div>
     <br/>
     <br/>
 </div>
-<script
-        src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script th:inline="javascript">
@@ -61,7 +56,7 @@
                 name: [[${seriesName}]],
                 data: [[${surveyMap.values()}]],
                 dataSorting: {
-                    enabled: true
+                    enabled: false
                 }
             }]
         });
