--- a/src/main/resources/templates/calculator_execute.html
+++ b/src/main/resources/templates/calculator_execute.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>wynik:</h1>
+
 <span th:text="${result}"></span>
+<input action="action" type="button" value="POWRÓT" onclick="history.go(-1);"/>
 </body>
 </html>
