--- a/src/main/resources/templates/calculator_execute.html
+++ b/src/main/resources/templates/calculator_execute.html
@@ -5,7 +5,7 @@
     <title>calculation</title>
 </head>
 <body>
-<h1>wynik:</h1>
+<h1>The result:</h1>
 <span th:text="${result}"></span>
 </body>
 </html>
