--- a/src/main/resources/templates/stringmod_execute.html
+++ b/src/main/resources/templates/stringmod_execute.html
@@ -5,7 +5,7 @@
     <title>modification</title>
 </head>
 <body>
-<h1>tekst po modyfikacji:</h1>
+<h1>your text after the modification:</h1>
 <span th:text="${modifiedString}"></span>
 </body>
 </html>
