--- a/src/main/resources/templates/graph.html
+++ b/src/main/resources/templates/graph.html
@@ -5,15 +5,15 @@
     <title>graph app</title>
 </head>
 <body>
-<h1>grafy dla statystyk</h1>>
+<h1>Graphs for application statistics</h1>>
 <form action="#" th:action="@{/graph/execute}" method="post" th:object="${graphForm}">
-    <label for="op">wybierz dzialanie</label>
+    <label for="op">choose statistic to view:</label>
     <select th:field="*{title}" id="op">
         <option th:each="stat : ${stats}" th:value="${stat}" th:text="${stat}"></option>
     </select>
     <button type="submit">START</button>
 </form>
-<h2>pobierz baze danych jako CSV</h2>
+<h2>download app data base as CSV</h2>
 <form action="#" th:action="@{/stringmod/download}" method="get">
     <button type="submit">DOWNLOAD</button>
 </form>
